# semantic-policy-generation

./: .env.example  .gitignore  README.md  how HEAD  findstr c7a18  main.py  pyproject.toml  run_all_eval_nohup.sh  test.py  test_pipeline.py
agents/generator/: generator.py
agents/reasoner/: conflict_types.py  reasoner_agent.py  reasoner_agent_old.py
agents/validator/: __init__.py  odrl_validation_tool.py  validator_agent.py
data/approved_policies/: approved_policies_dataset.json
data/rejected_policies/: rejected_policies_dataset.json
data/text2policy/: text2ttl_GT.jsonl
evaluation/: evaluate_deepseek.py  evaluate_models.py  evaluate_multi_models.py  evaluate_pipeline.py  evaluate_reasoning_agent.py  evaluate_text2ttl_pipeline.py  model_config_loader.py
evaluation/ground_truth_draft_generation/: README.md  main.py
evaluation/ground_truth_draft_generation/config/: config.json  pyproject.toml  requirements.txt
evaluation/ground_truth_draft_generation/llm_guidance_template/templates/: odrl.ttl  odrl_action.txt  odrl_dictionaries.py  odrl_leftOperand.txt  odrl_operator.txt
evaluation/ground_truth_draft_generation/scripts/: __init__.py  correction_report.py  file_paths.py  final_to_benchmark_jsonl.py  finalize_refined_ttl.py  util.py
evaluation/openai-apis/: example_models.json
utils/: add_spatial_policy.py  add_to_original_dataset.py  check_azure_models.py  generate_paper_results.py  unify_approved_policies.py  unify_rejected_policies.py
